--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>ICT Quiz - Interactive Quiz Platform</title>
+    <meta name="description" content="ICT Quiz - An interactive quiz platform for teachers and students. Create, manage, and take quizzes with real-time scoring and bilingual support." />
+    <meta name="author" content="ICT Quiz" />
+    <meta name="keywords" content="quiz, education, ICT, online quiz, student quiz, teacher quiz" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:title" content="ICT Quiz - Interactive Quiz Platform" />
+    <meta property="og:description" content="An interactive quiz platform for teachers and students with real-time scoring and bilingual support." />
+    <meta property="og:image" content="/favicon.ico" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="ICT Quiz - Interactive Quiz Platform" />
+    <meta name="twitter:description" content="An interactive quiz platform for teachers and students with real-time scoring and bilingual support." />
+    <meta name="twitter:image" content="/favicon.ico" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
