--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ICT Quiz - Interactive Quiz Platform</title>
-    <meta name="description" content="ICT Quiz - An interactive quiz platform for teachers and students. Create, manage, and take quizzes with real-time scoring and bilingual support." />
-    <meta name="author" content="ICT Quiz" />
-    <meta name="keywords" content="quiz, education, ICT, online quiz, student quiz, teacher quiz" />
+    <title>Quizioo - Interactive Quiz Platform</title>
+    <meta name="description" content="Quizioo - An interactive quiz platform for teachers and students. Create, manage, and take quizzes with real-time scoring and bilingual support." />
+    <meta name="author" content="Quizioo" />
+    <meta name="keywords" content="quiz, education, online quiz, student quiz, teacher quiz, quizioo" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="ICT Quiz - Interactive Quiz Platform" />
+    <meta property="og:title" content="Quizioo - Interactive Quiz Platform" />
     <meta property="og:description" content="An interactive quiz platform for teachers and students with real-time scoring and bilingual support." />
-    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:image" content="/quizioo-logo.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ICT Quiz - Interactive Quiz Platform" />
+    <meta name="twitter:title" content="Quizioo - Interactive Quiz Platform" />
     <meta name="twitter:description" content="An interactive quiz platform for teachers and students with real-time scoring and bilingual support." />
-    <meta name="twitter:image" content="/favicon.ico" />
+    <meta name="twitter:image" content="/quizioo-logo.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
